Update java 6